--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, "Create a new post" %>
+
 <h1 class="title"> Blog Index </h1>
 <section class="section">
  <div class="container">
