--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,27 @@
+<% content_for :page_title, @post.title %>
+
 <section class="section">
  <div class="container">
-  <h1 class="title">
-   <%= @post.title %>
-  </h1>
+  <nav class="level">
+   <div class="level-left">
+    <p class="level-item">
+     <strong>Actions</strong>
+    </p>
+   </div>
+   <div class="level-right">
+   <p class="level-item">
+     <%= link_to 'edit', edit_post_path(@post), class:'button' %>
+   </p>
+   <p class="level-item">
+    <a class="Button is-danger">Delete</a>
+   </p>
+  </div>
+  </nav>
+  <hr />
   <div class="content">
    <%= @post.content %>
   </div>
  </div>
+</section>
+<section class="comments">
 </section>
