--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
      <%= link_to 'edit', edit_post_path(@post), class:'button' %>
    </p>
    <p class="level-item">
-    <a class="Button is-danger">Delete</a>
+    <%= link_to 'delete', post_path(@post), method: :delete, data: { confirm: "Are you sure?" } , class:"button is-danger" %>
    </p>
   </div>
   </nav>
