Add create comments and deleting comments for posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,5 +23,14 @@
   </div>
  </div>
 </section>
-<section class="comments">
+<section class="sectioncomments">
+ <div class="container">
+  <h2 class="subtitle is-5"><strong><%= @post.comments.count %></strong> Comment</h2>
+  <%= render @post.comments %>
+  <div class="comment-form">
+   <hr />
+   <h3 class="subtitle is-3">Leave a reply </h3>
+   <%= render 'comments/form' %>
+  </div>
+ </div>
 </section>
